Update CORS configuration to use frontend URL variable